--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1619,107 +1619,107 @@ stories:
   domain: http://www.louisville.com/voice.html
   link: https://www.louisville.com/2nd-and-Ali/ep-4-we-love-daily-grind
 images:
-- name: mediterranean-mediterranean-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
-- name: walled-garden-walled-garden-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-spagetti-accident.jpg
-- name: white-house-lawn-white-house-lawn-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crafty-painting.jpg
+- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
+- name: walled-garden-walled-garden-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-alien-goggles.jpg
+- name: birdhouse-birdhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crunch-paper.jpg
+- name: crow_colorful_blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
+- name: oldhotel-oldhotel-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-circuit.jpg
+- name: blossombar-oily-mcoilface-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-50-62.jpg
+- name: blossombar-hot-spicy-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-00-00.jpg
+- name: white-house-lawn-white-house-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-blocks.jpg
+- name: oldbarn-oldbarn-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-electricity.jpg
+- name: crow-crow-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
+- name: powerlines-power-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
+- name: store-on-corner-store-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-really-hot.jpg
+- name: oldhouse-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-light-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
+- name: store-on-corner-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-constitution.jpg
+- name: razorwire-DSC-0080-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-umberto-bocc.jpg
+- name: castle-wall-DSC-0067-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-alberto-giacometti.JPG
+- name: birdhouse-birdhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-post-modern.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smooth-ride.jpg
+- name: catacombs-catacombs-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-cinnamon-rolls.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sand-paper.JPG
+- name: la-muse-down-the-line-harlem.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-down-the-line-harlem.jpg
+- name: la-muse-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-memorial_36690528196_o.jpg
+- name: mediterranean-mediterranean-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-deep-connections.jpg
+- name: old-house-oldhouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse.jpg
+- name: stalin-time-chess-in-the-park-with-pigeons.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-chess-in-the-park-with-pigeons.jpg
+- name: walled-garden-walled-garden-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-ww2-dresden.jpg
 - name: rockingchair-rockingchair-constitution.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-constitution.jpg
-- name: la-muse-dark-tower-of-london.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dark-tower-of-london.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-15-87.jpg
-- name: curtain-curtain-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-light-dali.jpg
-- name: oldhouse-granaryfield-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-granite.jpg
-- name: oldsmallboat-oldsmallboat-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-green-zuma.jpg
-- name: downtheline-downtheline-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crabapple.jpg
-- name: aws-s3-stories-server-racks-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-racks-clouds-copper-circuit.jpg
-- name: oldsmallboat-oldsmallboat-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-sand-paper.jpg
-- name: stalin-time-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-docks-water-front-ships-containers.jpg
-- name: copper-circuit-statue-supreme-court.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-supreme-court.jpg
-- name: gypsymosaic-gypsy-eyes-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
-- name: rockingchair-rockingchair-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-clean-view.jpg
-- name: copper-circuit-dark-hallway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway.jpg
-- name: meadowbutterfly-meadow-butterfly-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-satan-red.jpg
-- name: christianity-christianity-under-construction-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-monet-one.jpg
-- name: old-door-lock-old-door-lock-2-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-umberto-bocc.jpg
-- name: catacombs-catacombs-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-light-dali.jpg
-- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-- name: aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-death-valley-national-park-dali-three-just-road.jpg
-- name: crow_crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crabapple.jpg
-- name: stalin-time-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bridge-over-columbia.jpg
-- name: old-gas-pumps-oldgaspumps-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-constitution.jpg
-- name: white-house-lawn-white-house-window-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kand-two.jpg
-- name: miamibeach-miamibeach-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-monet-one.jpg
-- name: crow-crow-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-pablo-blue.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-- name: stalin-time-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-of-liberty_35910144944_o.jpg
-- name: nazi-invasion-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desktop-laptop-chair.jpg
-- name: copper-circuit-city-clouds-building-crowded.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-clouds-building-crowded.jpg
-- name: mediterranean-mediterranean-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-diego-rivera1.jpg
-- name: old-church-oldchurch-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purp-paper.jpg
-- name: cannon-facing-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
-- name: border-crossing-bordercrossing-really-hot.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-really-hot.png
-- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
-- name: castle-wall-DSC-0067-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-gan-vogh.JPG
-- name: stalin-time-surveillance-cameras_36343058400_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-cameras_36343058400_o.jpg
-- name: copper-circuit-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-lincoln-sitting-front.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-- name: gypsymosaic-gypsy-eyes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes.jpg
-- name: beach-rocks-beach-rocks-currents-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit.jpg
-- name: rain-princess-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
-- name: christianity-christianity-under-construction-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-diego-rivera1.jpg
-- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
-- name: oldsmallboat-oldsmallboat-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-granite.jpg
-- name: rockingchair-rockingchair-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-space-pizza.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
-- name: status-berlin-status-berlin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
+- name: downtheline-downtheline-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-smooth-ride.jpg
+- name: bf-skinner-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-los-angeles-downtown-from-afar.jpg
+- name: beach-rocks-beach-rocks-currents-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-atari-missle.jpg
+- name: stalin-time-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church_36588495271_o.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
+- name: old-house-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-diego-rivera1.jpg
+- name: border-fence-border-fence-on-hill-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-plentiful.jpg
+- name: server-cloud-server-racks-door-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-satan-red.jpg
+- name: server-cloud-server-racks-door-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-light-dali.jpg
+- name: stories-death-valley-national-park-dali-three-just-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
+- name: stalin-time-volkswagon-microbus-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-volkswagon-microbus-windows.jpg
+- name: border-fence-border-fence-on-hill-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-nazi-poster.jpg
+- name: bf-skinner-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-coming-in-on-train.jpg
+- name: stalin-time-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-city-buildings.jpg
+- name: miamibeach-miamibeach-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-smoking-cigarette.jpg
+- name: razorwire-DSC-0080-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kandinsky-bv.jpg
+- name: catacombs-catacombs-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-really-hot.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-brush.png
+- name: yuma-bank-yuma-bak-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-copper-circuit.jpg
+- name: old-house-oldhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-brush.jpg
+- name: catacombs-catacombs-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purple-pond.jpg
+- name: copper-circuit-clowns_35893926114_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-clowns_35893926114_o.jpg
 ---
 Homer's Odyssey Leads Him To Starting Role For Seahawks.&nbsp;Nanaboozhoo And The First Newebiboon Migwewin.&nbsp;IU's Ramsey Ready To Face Namesake's Alma Mater.&nbsp;Back From Break, Concordia Women's Basketball Is Ready For More Challenges.&nbsp;Snow Arrives Too Late For White Christmas.&nbsp;Pumping Gas At A Shell Station On National Coming Out Day.&nbsp;`Captain America' Actress Charged With Killing Mom In Kansas.&nbsp;Partners To Dedicate Building.&nbsp;
